Please add image

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ try{function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){retur
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://calla-norris.format.com/home"/>
 <meta property="og:image" content="https://format-com-cld-res.cloudinary.com/image/private/s---W9JJ0yb--/c_crop,h_851,w_851,x_79,y_0/c_fill,g_center,h_1200,w_1600/a_auto,fl_keep_iptc.progressive,q_95/v1/21754e9ae5d1599e12a359f362b78d28/home1024_1.jpg"/>
+<meta property="og:image" content="home1024_1 copy.jpg"/>
 
   <meta property="og:image:width" content="1009" />
   <meta property="og:image:height" content="851" />
@@ -478,6 +479,7 @@ try{function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){retur
 
 
 
+    <div data-croppable="true" data-default-shape="landscape" data-editable-type="image" data-height="506" data-landscape-ratio="760:506" data-linkable="true" data-portrait-ratio="2:3" data-width="760" id="Home1024_1.jpg" data-default-img="" data-dom-id="" data-link-type="none" data-link-value="" data-id="64358497" data-content-module-unique-id="">
 
   <a  >
 
@@ -485,6 +487,7 @@ try{function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){retur
     <img src="https://format-com-cld-res.cloudinary.com/image/private/s--KKB3MT23--/c_crop,h_851,w_1009,x_0,y_0/c_fill,g_center,h_640,w_760/a_auto,fl_keep_iptc.progressive,q_95/v1/21754e9ae5d1599e12a359f362b78d28/home1024_1.jpg" srcset="https://format-com-cld-res.cloudinary.com/image/private/s--KKB3MT23--/c_crop,h_851,w_1009,x_0,y_0/c_fill,g_center,h_640,w_760/a_auto,fl_keep_iptc.progressive,q_95/v1/21754e9ae5d1599e12a359f362b78d28/home1024_1.jpg 1x, https://format-com-cld-res.cloudinary.com/image/private/s--UHyEc50---/c_crop,h_851,w_1009,x_0,y_0/c_fill,g_center,h_640,w_760/a_auto,dpr_2,fl_keep_iptc.progressive,q_95/v1/21754e9ae5d1599e12a359f362b78d28/home1024_1.jpg 2x"  />
 
 
+    <img src="https://github.com/callanorris/callanorris.github.io/blob/index.html/home1024_1.jpg?raw=true" alt="home1024_1.jpg"
   </a>
 
 
