--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <script src="https://bucket1.format-assets.com/theme_versions/4351869/assets/javascripts/html5shiv.js"></script>
   <![endif]-->
 
+  <head>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  </head>
 
 
 
