--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="Portfolio Style Sheet" type="text/css" href="Portfolio Style Sheet ">
   </head>
 
 
