--- a/index.html
+++ b/index.html
@@ -468,5 +468,17 @@ try{function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){retur
 
 
   <script src="https://bucket1.format-assets.com/theme_versions/4351869/assets/javascripts/main.js" type="text/javascript"></script>
+
+  <style>
+  img {
+    width: 100%;
+  }
+  </style>
+
+<a>
+  <img src="https://github.com/callanorris/callanorris.github.io/blob/index.html/home1024_1.jpg?raw=true" alt="home1024_1.jpg" width="128" height="128">
+  <img src="https://github.com/callanorris/callanorris.github.io/blob/index.html/home1024_1.jpg?raw=true" alt="home1024_1.jpg" style="width:128px;height:128px;">
+</a>
+
 </body>
 </html>
