img source change

--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@ try{function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){retur
   <a  >
 
 
-     <img src="https://raw.githubusercontent.com/callanorris/callanorris.github.io/index.html/home1024_1.jpg"  />
+     <img <img src="home1024_1.jpg" alt="home1024_1.jpg" width="128" height="128">
+<img src="home1024_1.jpg" alt="home_1.jpg" style="width:128px;height:128px;">
 
 
    </a>
