--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link src="https://bucket1.format-assets.com/theme_versions/4351869/assets/javascripts/html5shiv.js">
   <style>
 
 
